Update Algerian Forest fire data.ipynb

--- a/Algerian Forest fire data.ipynb
+++ b/Algerian Forest fire data.ipynb
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#dataset is devided into two region bejaia region then another dataset into sidi beal \n",
+    "#dataset is divided into two region bejaia region then another dataset into sidi beal \n",
     "\n",
     "The dataset is converted into two sets based on region from 122th index we can make a new column based on the region\n",
     "\n",
